@@ -111,8 +111,15 @@ This option must be requested explicitly, even for a complete scan.
 NETWORK OPTIONS
 ---------------
 
-NOTE: Some of the networked buses (such as SNMP, NetXML, IPMI and "Old NUT")
-require IP address(es) to scan, and others have a
+NOTE: The networked buses (such as SNMP, NetXML, IPMI and "Old NUT") allow to
+specify several IP (IPv4 or IPv6) address ranges, down to individual single
+IP addresses.  Normally a new range is specified by a set of one `-s` and one
+`-e` options following each other (in any order).  Lone or consecutive `-s` or
+`-e` options present on the command line would translate to single-IP queries.
+Also a `-m` option squashed between two `-s` and `-e` options would be a new
+range, turning those two into single-IP queries.
++
+Also note that some buses require IP address(es) to scan, and others have a
 different behavior when exactly no addresses are specified (it is not currently
 possible to mix the two behaviors in one invocation of the `nut-scanner` tool).
 
